--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gh-pages": "^3.1.0",
     "handlebars-loader": "^1.7.1",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^4.5.0",
+    "html-loader": "^1.3.1",
+    "html-webpack-plugin": "^4.5.2",
     "img-loader": "^3.0.2",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
@@ -49,9 +49,8 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "handlebars": "^4.7.6",
-    "normalize.css": "^8.0.1"
+    "lodash.debounce": "^4.0.8"
   }
 }
